Label car like objects (#14)
* Label cars notebook 4

* Change notebook 2

* Feedback

* Add car fuser class

* Create bgt_roads.csv

* NPZReader class for convenience.

* Working solution for tile 2386_9702.

* Add readme text

Co-authored-by: daanbl <daan.bloembergen@gmail.com>

--- a/notebooks/0. Complete solution.ipynb
+++ b/notebooks/0. Complete solution.ipynb
@@ -25,6 +25,7 @@
     "\n",
     "import src.fusion as fusion\n",
     "import src.region_growing as growing\n",
+    "import src.utils.ahn_utils as ahn_utils\n",
     "from src.pipeline import Pipeline\n",
     "from src.utils.labels import Labels"
    ]
@@ -37,8 +38,10 @@
    "outputs": [],
    "source": [
     "# Select the file to process.\n",
-    "in_file = '../datasets/pointcloud/filtered_2386_9702.laz'\n",
-    "out_file = '../datasets/pointcloud/complete_2386_9702.laz'"
+    "tile_code = '2386_9702'\n",
+    "\n",
+    "in_file = '../datasets/pointcloud/filtered_' + tile_code + '.laz'\n",
+    "out_file = '../datasets/pointcloud/complete_' + tile_code + '.laz'"
    ]
   },
   {
@@ -98,6 +101,37 @@
   },
   {
    "cell_type": "markdown",
+   "id": "secret-packaging",
+   "metadata": {},
+   "source": [
+    "## Label car like objects\n",
+    "Now, we divide the leftover points in clusters and determine car like objects. \n",
+    "\n",
+    "For details and on how to generate the BGT road csv file, see [4. Label cars](4.%20Label%20cars.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "intense-summit",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# File with road information from BGT.\n",
+    "bgt_data_file = '../datasets/bgt/bgt_roads.csv'\n",
+    "\n",
+    "ahn_reader = ahn_utils.NPZReader(ahn_data_folder)\n",
+    "\n",
+    "# Car fuser using a clustering algorithm and BGT road data.\n",
+    "car_fuser = fusion.CarFuser(Labels.CAR, ahn_reader, \n",
+    "                            bgt_file=bgt_data_file, octree_level=10,\n",
+    "                            min_component_size=100, max_above_ground=3,\n",
+    "                            min_width_thresh=1.5, max_width_thresh=2.55,\n",
+    "                            min_length_thresh=2.0, max_length_thresh=7.0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "collaborative-durham",
    "metadata": {},
    "source": [
@@ -112,9 +146,8 @@
    "outputs": [],
    "source": [
     "# Set-up pipeline.\n",
-    "fusers = (npz_ground_fuser, npz_building_fuser)\n",
-    "growers = (building_grower,)\n",
-    "pipeline = Pipeline(fusers, growers)\n",
+    "process_sequence = (npz_ground_fuser, npz_building_fuser, building_grower, car_fuser)\n",
+    "pipeline = Pipeline(process_sequence)\n",
     "\n",
     "start = time.time()\n",
     "# Process the file.\n",
@@ -161,7 +194,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
