Working solution for two demo tiles with LCC growing of street lights and signs.

--- a/notebooks/BGT point fusion.ipynb
+++ b/notebooks/BGT point fusion.ipynb
@@ -123,7 +123,7 @@
     "# Remove ground and building points.\n",
     "PRE_MASK = (las.label != Labels.GROUND) & (las.label != Labels.BUILDING)\n",
     "PRE_MASK_IDS = np.where(PRE_MASK)[0]\n",
-    "points = np.vstack((las.x[PRE_MASK], las.y[PRE_MASK], las.z[PRE_MASK])).T"
+    "points = np.vstack((las.x, las.y, las.z)).T[PRE_MASK, :]"
    ]
   },
   {
@@ -141,7 +141,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def find_point_cluster(points, point, plane_height, plane_buffer=0.1, search_radius=1, max_dist=0.1, min_points=1):\n",
+    "def find_point_cluster(points, point, plane_height, plane_buffer=0.1, search_radius=1, max_dist=0.1, min_points=1, max_r=0.5):\n",
     "    search_ids = np.where(clip_utils.cylinder_clip(points, point, search_radius, bottom=plane_height-plane_buffer, top=plane_height+plane_buffer))[0]\n",
     "    if len(search_ids) < min_points:\n",
     "        return np.empty((0, 3))\n",
@@ -161,9 +161,9 @@
     "        c_mask = clustering.labels_ == cl\n",
     "        (cx, cy) = np.mean(points[search_ids[c_mask], 0:2], axis=0)\n",
     "        cr = np.max(np.max(points[search_ids[c_mask], 0:2], axis=0) - np.min(points[search_ids[c_mask], 0:2], axis=0)) / 2\n",
-    "        if (point[0] - cx)**2 + (point[1] - cy)**2 < (cr + max_dist)**2:\n",
+    "        if cr <= max_r and (point[0] - cx)**2 + (point[1] - cy)**2 < (cr + max_dist)**2:\n",
     "            c_xyr_list.append([cx, cy, cr])\n",
-    "    return np.array(c_xyr_list)"
+    "    return c_xyr_list"
    ]
   },
   {
@@ -173,7 +173,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def find_seeds_for_point_objects(points, point_objects, fast_z, search_pad=1.5, voxel_res=0.1, seed_height=1.5, min_height=2, min_points=500, z_min=0, z_max=2.5):\n",
+    "def find_seeds_for_point_objects(points, point_objects, fast_z, search_pad=1.5, max_dist=1.2, voxel_res=0.1,\n",
+    "                                 seed_height=1.5, min_height=2, min_points=500, max_r=0.5,\n",
+    "                                 z_min=0.2, z_max=2.7):\n",
     "    seeds = []\n",
     "    for ind, obj in enumerate(point_objects):\n",
     "        # Assume obj = [x, y].\n",
@@ -187,26 +189,34 @@
     "        y_edge = np.arange(search_box[1], search_box[3] + 0.01, voxel_res)\n",
     "        min_z_bin = binned_statistic_2d(points[box_ids, 0], points[box_ids, 1], points[box_ids, 2], bins=[x_edge, y_edge], statistic='min')\n",
     "        max_z_bin = binned_statistic_2d(points[box_ids, 0], points[box_ids, 1], points[box_ids, 2], bins=[x_edge, y_edge], statistic='max')\n",
-    "        #med_z_bin = binned_statistic_2d(points[box_ids, 0], points[box_ids, 1], points[box_ids, 2], bins=[x_edge, y_edge], statistic='median')\n",
+    "        med_z_bin = binned_statistic_2d(points[box_ids, 0], points[box_ids, 1], points[box_ids, 2], bins=[x_edge, y_edge], statistic='median')\n",
     "        count_z_bin = binned_statistic_2d(points[box_ids, 0], points[box_ids, 1], points[box_ids, 2], bins=[x_edge, y_edge], statistic='count')\n",
     "\n",
-    "        midpoint = ground_z + (z_min + z_max) / 2\n",
-    "        #med_mid = np.abs(med_z_bin.statistic - midpoint) < 0.25\n",
-    "        diff = max_z_bin.statistic - min_z_bin.statistic\n",
-    "        #x_loc, y_loc = np.where((diff > min_height) & (count_z_bin.statistic > min_points) & med_mid)\n",
-    "        x_loc, y_loc = np.where((diff > min_height) & (count_z_bin.statistic > min_points))\n",
+    "        height = max_z_bin.statistic - min_z_bin.statistic\n",
+    "        midpoint = (min_z_bin.statistic + max_z_bin.statistic) / 2\n",
+    "        med_mid = np.abs(med_z_bin.statistic - midpoint) < 0.2 * height\n",
+    "        x_loc, y_loc = np.where((height > min_height) & (count_z_bin.statistic > min_points) & med_mid)\n",
+    "        #x_loc, y_loc = np.where((height > min_height) & (count_z_bin.statistic > min_points))\n",
     "        if len(x_loc) == 0:\n",
     "            print(f'No candidates found for object {ind}.')\n",
     "            continue\n",
     "        candidates = np.stack((x_edge[x_loc] + voxel_res/2, y_edge[y_loc] + voxel_res/2)).T\n",
+    "        cand_height = height[x_loc, y_loc]\n",
     "        dist = [np.linalg.norm(np.array(obj) - np.array([c])) for c in candidates]\n",
     "        c_prime = candidates[np.argmin(dist), :]\n",
-    "        clusters = find_point_cluster(points, c_prime, seed_height)\n",
-    "        if len(clusters) > 0:\n",
-    "            seeds.append(clusters[0])\n",
+    "        cp_height = cand_height[np.argmin(dist)]\n",
+    "        clusters = []\n",
+    "        if min(dist) <= max_dist:\n",
+    "            clusters = find_point_cluster(points, c_prime, seed_height)\n",
+    "            if len(clusters) > 0 and clusters[0][2] <= max_r:\n",
+    "                seed = clusters[0]\n",
+    "                seed.append(cp_height)\n",
+    "                seeds.append(seed)\n",
+    "            else:\n",
+    "                print(f'No cluster found for object {ind}') #, using default.')\n",
+    "                #seeds.append([c_prime[0], c_prime[1], voxel_res, cp_height])\n",
     "        else:\n",
-    "            print(f'No cluster found for object {ind}, using default.')\n",
-    "            seeds.append([c_prime[0], c_prime[1], voxel_res])\n",
+    "            print(f'No candidates found for object {ind}.')\n",
     "    return seeds"
    ]
   },
@@ -250,7 +260,7 @@
     "# Match and label trees.\n",
     "tree_points = find_seeds_for_point_objects(points[label_mask], trees, fast_z, voxel_res=0.2, seed_height=1.75, min_points=500)\n",
     "for tree in tree_points:\n",
-    "    clip_mask = clip_utils.cylinder_clip(points, tree[0:2], r_mult*tree[2], top=fast_z(np.array([tree[0:2]]))+4)\n",
+    "    clip_mask = clip_utils.cylinder_clip(points, np.array(tree[0:2]), r_mult*tree[2], top=fast_z(np.array([tree[0:2]]))+4)\n",
     "    tree_mask = tree_mask | clip_mask\n",
     "\n",
     "label_mask[tree_mask] = False"
@@ -264,9 +274,9 @@
    "outputs": [],
    "source": [
     "mask_ids = np.where(label_mask)[0]\n",
-    "light_points = find_seeds_for_point_objects(points[label_mask], lights, fast_z, voxel_res=0.2, seed_height=2.25, min_points=400)\n",
+    "light_points = find_seeds_for_point_objects(points[label_mask], lights, fast_z, voxel_res=0.2, seed_height=2.25, min_points=400, max_r=0.2)\n",
     "for light in light_points:\n",
-    "    clip_mask = clip_utils.cylinder_clip(points, light[0:2], r_mult*light[2], top=fast_z(np.array([light[0:2]]))+4)\n",
+    "    clip_mask = clip_utils.cylinder_clip(points, np.array(light[0:2]), r_mult*light[2], top=fast_z(np.array([light[0:2]]))+5)\n",
     "    light_mask = light_mask | clip_mask\n",
     "\n",
     "label_mask[light_mask] = False"
@@ -280,9 +290,9 @@
    "outputs": [],
    "source": [
     "mask_ids = np.where(label_mask)[0]\n",
-    "sign_points = find_seeds_for_point_objects(points[label_mask], signs, fast_z, voxel_res=0.2, seed_height=1.5, min_points=400)\n",
+    "sign_points = find_seeds_for_point_objects(points[label_mask], signs, fast_z, voxel_res=0.2, seed_height=1.75, min_points=200, max_r=0.2, min_height=1.2, z_max=2.)\n",
     "for sign in sign_points:\n",
-    "    clip_mask = clip_utils.cylinder_clip(points, sign[0:2], r_mult*sign[2], top=fast_z(np.array([sign[0:2]]))+3)\n",
+    "    clip_mask = clip_utils.cylinder_clip(points, np.array(sign[0:2]), r_mult*sign[2], top=fast_z(np.array([sign[0:2]]))+3)\n",
     "    sign_mask = sign_mask | clip_mask"
    ]
   },
@@ -298,6 +308,53 @@
     "labels[PRE_MASK_IDS[tree_mask]] = Labels.TREE\n",
     "labels[PRE_MASK_IDS[light_mask]] = Labels.STREET_LIGHT\n",
     "labels[PRE_MASK_IDS[sign_mask]] = Labels.TRAFFIC_SIGN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4957dcc4-93ca-4a3c-a515-01ce7fc99f4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cluster based region growing.\n",
+    "# Not for trees yet.\n",
+    "\n",
+    "plane_height = 3.5\n",
+    "height_mask_ids = np.where(points[:,2] > avg_ground_height + plane_height)[0]\n",
+    "lcc_light = LabelConnectedComp(Labels.STREET_LIGHT, exclude_labels=(Labels.TREE, Labels.TRAFFIC_SIGN),\n",
+    "                               octree_level=9, min_component_size=100, threshold=0.05)\n",
+    "lcc_light_mask = lcc_light.get_label_mask(points=points[height_mask_ids], labels=labels[PRE_MASK_IDS][height_mask_ids])\n",
+    "labels[PRE_MASK_IDS[height_mask_ids[lcc_light_mask]]] = lcc_light.get_label()\n",
+    "\n",
+    "plane_height = 1.5\n",
+    "height_mask_ids = np.where(points[:,2] > avg_ground_height + plane_height)[0]\n",
+    "lcc_sign = LabelConnectedComp(Labels.TRAFFIC_SIGN, exclude_labels=(Labels.TREE, Labels.STREET_LIGHT),\n",
+    "                              octree_level=9, min_component_size=100, threshold=0.05)\n",
+    "lcc_sign_mask = lcc_sign.get_label_mask(points=points[height_mask_ids], labels=labels[PRE_MASK_IDS][height_mask_ids])\n",
+    "labels[PRE_MASK_IDS[height_mask_ids[lcc_sign_mask]]] = lcc_sign.get_label()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40a58bdb-a715-4c2b-9e2f-87649006fab2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plane_height = 1.5\n",
+    "height_mask_ids = np.where(points[:,2] <= avg_ground_height + plane_height)[0]\n",
+    "lcc_light = LabelConnectedComp(Labels.STREET_LIGHT, exclude_labels=(Labels.TREE, Labels.TRAFFIC_SIGN),\n",
+    "                               octree_level=9, min_component_size=100, threshold=0.7)\n",
+    "lcc_light_mask = lcc_light.get_label_mask(points=points[height_mask_ids], labels=labels[PRE_MASK_IDS][height_mask_ids])\n",
+    "labels[PRE_MASK_IDS[height_mask_ids[lcc_light_mask]]] = lcc_light.get_label()\n",
+    "\n",
+    "plane_height = 1.75\n",
+    "height_mask_ids = np.where(points[:,2] <= avg_ground_height + plane_height)[0]\n",
+    "lcc_sign = LabelConnectedComp(Labels.TRAFFIC_SIGN, exclude_labels=(Labels.TREE, Labels.STREET_LIGHT),\n",
+    "                              octree_level=9, min_component_size=100, threshold=0.7)\n",
+    "lcc_sign_mask = lcc_sign.get_label_mask(points=points[height_mask_ids], labels=labels[PRE_MASK_IDS][height_mask_ids])\n",
+    "labels[PRE_MASK_IDS[height_mask_ids[lcc_sign_mask]]] = lcc_sign.get_label()"
    ]
   },
   {
@@ -353,48 +410,6 @@
     "ax.set_ylabel('Y')\n",
     "plt.axis('equal')\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f53ad703-a37c-4491-83b6-4429f45af9a5",
-   "metadata": {},
-   "source": [
-    "## TODO Cluster Growing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d8090cac-fc89-4d7a-9620-464969665138",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plane_height = 1.25\n",
-    "\n",
-    "height_mask_ids = np.where(points[:,2] > avg_ground_height + plane_height)[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "db761d23-79f3-4a9e-8a77-4967c2973506",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Cluster based region growing.\n",
-    "# Not for trees yet.\n",
-    "lcc_light = LabelConnectedComp(Labels.STREET_LIGHT, exclude_labels=(Labels.TREE, Labels.TRAFFIC_SIGN),\n",
-    "                               octree_level=9, min_component_size=100, threshold=0.1)\n",
-    "lcc_sign = LabelConnectedComp(Labels.TRAFFIC_SIGN, exclude_labels=(Labels.TREE, Labels.STREET_LIGHT),\n",
-    "                              octree_level=9, min_component_size=100, threshold=0.05)\n",
-    "\n",
-    "lcc_light_mask = lcc_light.get_label_mask(points=points[height_mask_ids], las_labels=las.label[mask][height_mask_ids])\n",
-    "lcc_sign_mask = lcc_sign.get_label_mask(points=points[height_mask_ids], las_labels=las.label[mask][height_mask_ids])\n",
-    "\n",
-    "# Update labels.\n",
-    "labels[mask_ids[height_mask_ids[lcc_light_mask]]] = lcc_light.get_label()\n",
-    "labels[mask_ids[height_mask_ids[lcc_sign_mask]]] = lcc_sign.get_label()"
    ]
   },
   {
