Small fixes in notebooks.

--- a/notebooks/3. Region growing.ipynb
+++ b/notebooks/3. Region growing.ipynb
@@ -106,7 +106,7 @@
    "source": [
     "# Set-up region growing based on PCL pipeline.\n",
     "growers = (region_growing_pcl,)\n",
-    "pipeline = Pipeline(region_growing=growers)"
+    "pipeline = Pipeline(process_sequence=growers)"
    ]
   },
   {
@@ -117,7 +117,7 @@
    "source": [
     "# Set-up clustering based region growing pipeline.\n",
     "growers = (region_growing_clustering,)\n",
-    "pipeline = Pipeline(region_growing=growers)"
+    "pipeline = Pipeline(process_sequence=growers)"
    ]
   },
   {
@@ -193,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
