--- a/notebooks/2. Data fusion.ipynb
+++ b/notebooks/2. Data fusion.ipynb
@@ -177,7 +177,7 @@
    "source": [
     "# Set-up full AHN pipeline.\n",
     "fusers = (npz_ground_fuser, npz_building_fuser)\n",
-    "pipeline = Pipeline(fusers=fusers)"
+    "pipeline = Pipeline(process_sequence=fusers)"
    ]
   },
   {
@@ -189,7 +189,7 @@
    "source": [
     "# ALTERNATIVE: Set-up AHN GeoTIFF + BGT pipeline.\n",
     "fusers = (geotiff_ground_fuser, bgt_building_fuser)\n",
-    "pipeline = Pipeline(fusers=fusers)"
+    "pipeline = Pipeline(process_sequence=fusers)"
    ]
   },
   {
@@ -270,7 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
