Updated datasets and notebook.

--- a/notebooks/0. Complete solution.ipynb
+++ b/notebooks/0. Complete solution.ipynb
@@ -49,8 +49,10 @@
    "id": "turned-softball",
    "metadata": {},
    "source": [
+    "---\n",
     "## Data Fusion\n",
     "\n",
+    "### Ground and Buildings\n",
     "First, we use data fusion to automatically label ground and building points.\n",
     "\n",
     "For details and more options, see [2. Data fusion](2.%20Data%20fusion.ipynb)."
@@ -76,10 +78,77 @@
   },
   {
    "cell_type": "markdown",
+   "id": "secret-packaging",
+   "metadata": {},
+   "source": [
+    "### Cars\n",
+    "\n",
+    "Then we label cars by searching for 'car-like' clusters above road segments.\n",
+    "\n",
+    "For details and on how to generate the BGT road csv file, see [4. Label cars](4.%20Label%20cars.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "intense-summit",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# File with road information from BGT.\n",
+    "bgt_data_file = '../datasets/bgt/bgt_roads_' + tile_code + '.csv'\n",
+    "\n",
+    "# We use AHN elevation data to determine whether objects are close enough to the ground.\n",
+    "ahn_reader = ahn_utils.NPZReader(ahn_data_folder)\n",
+    "\n",
+    "# Car fuser using a clustering algorithm and BGT road data.\n",
+    "car_fuser = fusion.CarFuser(Labels.CAR, ahn_reader, \n",
+    "                            bgt_file=bgt_data_file, octree_level=10,\n",
+    "                            min_component_size=100, max_above_ground=3,\n",
+    "                            min_width_thresh=1.5, max_width_thresh=2.55,\n",
+    "                            min_length_thresh=2.0, max_length_thresh=7.0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7bac6c70-c67c-440f-9c93-7790b172db05",
+   "metadata": {},
+   "source": [
+    "### Pole-like objects\n",
+    "\n",
+    "Finally we look for 'pole-like' objects such as street lights and traffic signs.\n",
+    "\n",
+    "For details and more options, see [2. BGT point fusion](2.%20BGT%20point%20fusion.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7f0a685-2525-40ab-bd8f-eff7f94a97fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# File with <x,y> coordinates of pole-like objects.\n",
+    "bgt_data_file = '../datasets/bgt/custom_points_' + tile_code + '.csv'\n",
+    "\n",
+    "# Parameter settings.\n",
+    "light_params = {'seed_height': 2.25, 'min_points': 400, 'max_r': 0.2, 'label_height': 5.}\n",
+    "sign_params = {'seed_height': 1.75, 'min_points': 200, 'max_r': 0.2, 'min_height': 1.2, 'z_max': 2., 'label_height': 3.}\n",
+    "\n",
+    "# Fusers for BGT point data.\n",
+    "light_fuser = fusion.BGTPointFuser(Labels.STREET_LIGHT, bgt_type='lichtmast', bgt_file=bgt_data_file, ahn_reader=ahn_reader, params=light_params)\n",
+    "sign_fuser = fusion.BGTPointFuser(Labels.TRAFFIC_SIGN, bgt_type='verkeersbord', bgt_file=bgt_data_file, ahn_reader=ahn_reader, params=sign_params)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "literary-source",
    "metadata": {},
    "source": [
+    "---\n",
     "## Region Growing\n",
+    "\n",
+    "### Buildings\n",
     "\n",
     "Then, we use region growing to refine the buildings. This will make sure that protruding elements such as balconies are labelled correctly.\n",
     "\n",
@@ -101,33 +170,35 @@
   },
   {
    "cell_type": "markdown",
-   "id": "secret-packaging",
+   "id": "eec09ab7-c0d3-4e0f-9412-fd714c05e1d2",
    "metadata": {},
    "source": [
-    "## Label car like objects\n",
-    "Now, we divide the leftover points in clusters and determine car like objects. \n",
+    "### Pole-like objects\n",
     "\n",
-    "For details and on how to generate the BGT road csv file, see [4. Label cars](4.%20Label%20cars.ipynb)."
+    "We also use region growing to refine the pole-like objects. We do this separately for the top and bottom since the best settings for each might differ.\n",
+    "\n",
+    "For details and more options, see [2. BGT point fusion](2.%20BGT%20point%20fusion.ipynb)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "intense-summit",
+   "id": "48e1670c-58c8-476a-ae85-5b0ab7ec241c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# File with road information from BGT.\n",
-    "bgt_data_file = '../datasets/bgt/bgt_roads.csv'\n",
+    "light_top_params = {'plane_height': 3.25, 'threshold': 0.05}\n",
+    "light_bottom_params = {'plane_height': 1.5, 'threshold': 0.5}\n",
     "\n",
-    "ahn_reader = ahn_utils.NPZReader(ahn_data_folder)\n",
+    "sign_top_params = {'plane_height': 1.5, 'threshold': 0.05}\n",
+    "sign_bottom_params = {'plane_height': 1.5, 'threshold': 0.5}\n",
     "\n",
-    "# Car fuser using a clustering algorithm and BGT road data.\n",
-    "car_fuser = fusion.CarFuser(Labels.CAR, ahn_reader, \n",
-    "                            bgt_file=bgt_data_file, octree_level=10,\n",
-    "                            min_component_size=100, max_above_ground=3,\n",
-    "                            min_width_thresh=1.5, max_width_thresh=2.55,\n",
-    "                            min_length_thresh=2.0, max_length_thresh=7.0)"
+    "light_grower = growing.TopBottomLCC(Labels.STREET_LIGHT, ahn_reader, \n",
+    "                                    top_params=light_top_params, \n",
+    "                                    bottom_params=light_bottom_params)\n",
+    "sign_grower = growing.TopBottomLCC(Labels.TRAFFIC_SIGN, ahn_reader, \n",
+    "                                   top_params=sign_top_params, \n",
+    "                                   bottom_params=sign_bottom_params)"
    ]
   },
   {
@@ -146,7 +217,8 @@
    "outputs": [],
    "source": [
     "# Set-up pipeline.\n",
-    "process_sequence = (npz_ground_fuser, npz_building_fuser, building_grower, car_fuser)\n",
+    "process_sequence = (npz_ground_fuser, npz_building_fuser, light_fuser, sign_fuser, car_fuser,\n",
+    "                    building_grower, light_grower, sign_grower)\n",
     "pipeline = Pipeline(process_sequence)\n",
     "\n",
     "start = time.time()\n",
@@ -163,7 +235,7 @@
    "source": [
     "## View the result (e.g. in CloudCompare)\n",
     "\n",
-    "The final result can be viewed in CloudCompare. Open the out_file (e.g. datasets/pointcloud/labelled_2386_9702.laz) and change `Colors` from \"RGB\" to \"Scalar field\".\n",
+    "The final result can be viewed in CloudCompare. Open the out_file (e.g. datasets/pointcloud/labelled_2386_9702.laz) and change `Colors` from \"RGB\" to \"Scalar field\". For best results, use our [custom color scale](https://github.com/Amsterdam-AI-Team/Urban_PointCloud_Processing/raw/main/media/cc_color_scale.xml).\n",
     "\n",
     "The result should look like this:\n",
     "![Demo result](https://github.com/Amsterdam-AI-Team/Urban_PointCloud_Processing/raw/main/media/examples/demo_result.png)"
